using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class AnimationParametersList : MonoBehaviour
{
    public const string isWalking = "IsWalking";
    public const string attack = "attack";

    public const string playerDamageTaken = "Player_damage_taken";
    public const string enemyDamageTaken = "Enemy_damage_taken";

    public const string daggerAttack = "Dagger_attack";
    public const string daggerAttack2 = "Dagger_attack2";
    public const string daggerAttack3 = "Dagger_attack3";
    public const string daggerAttack4 = "Dagger_attack4";

    public const string axeAttack = "Axe_attack";
    public const string axeAttack2 = "Axe_attack2";
    public const string axeAttack3 = "Axe_attack3";

    public const string swordAttack = "Sword_attack";
    public const string swordAttack2 = "Sword_attack2";
    public const string swordAttack3 = "Sword_attack3";
    public const string swordAttack4 = "Sword_attack4";

    public const string openChest = "Open_chest";
}
